issue #98 - urls that are to long, break the layout

--- a/docs/css/src/issues-list.css
+++ b/docs/css/src/issues-list.css
@@ -11,7 +11,7 @@
 }
 
 .issue-url {
-  word-break: break-word;
+  word-break: break-all;
 }
 
 .issue .issue-description,
